fixed label text wrapping and being out of position

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -94,6 +94,10 @@
 
 
 /* main and graph views */
+label {
+    white-space: nowrap;
+}
+
 .graph-data {
     margin-top: 20px
 }
